--- a/views/pug/chat.pug
+++ b/views/pug/chat.pug
@@ -1,22 +1,43 @@
 html
   head
-    title FCC Advanced Node and Express
-    meta(name='description', content='Home page')
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='/public/style.css')
+    title FCC Advanced Chat
+    meta(name='viewport' content='width=device-width, initial-scale=1')
+    link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css')
+    link(rel='stylesheet' href='/public/style.css')
+
   body
-    h1.border.center FCC Advanced Node and Express
-    h2.center Socket.IO Chat Room
-    .chat.center
-      p#num-users
+    .navbar
+      .nav-content
+        .brand
+          i.fas.fa-comments
+          h1 FCC Chat
+        #user-status
+          span#num-users 0
+          .online-dot
+
+    .chat-container
       .chat-box
         ul#messages
-        form(action='')
-          input#m(autocomplete='off')
-          button Send
-      a#logout(href='/logout') Logout
+          li.message.system
+            i.fas.fa-info-circle
+            | Welcome to the chat!
+        
+        .chat-input-container
+          form.chat-form
+            input#m(
+              type="text"
+              placeholder="Type your message..."
+              autocomplete="off"
+              aria-label="Type your message"
+            )
+            button.btn-send(type="submit")
+              i.fas.fa-paper-plane
+              span.sr-only Send Message
+
+    a#logout(href='/logout')
+      i.fas.fa-sign-out-alt
+      span Logout
+
     script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js', integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=', crossorigin='anonymous')
-    <script src='/socket.io/socket.io.js'></script>
-    script(async, defer, src='/public/client.js')
+    script(src='/socket.io/socket.io.js')
+    script(async defer src='/public/client.js')
