--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -1,48 +1,50 @@
 html
   head
-    title FCC Advanced Node and Express
+    title FCC Chat App
     meta(name='description', content='Home page')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(href='https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap' rel='stylesheet')
     link(rel='stylesheet', href='/public/style.css')
   body
-    h1.border.center FCC Advanced Node and Express
-    h2.center#pug-success-message
-    | Looks like this page is being rendered from Pug into HTML!
-    | #{title}
-    p#pug-variable=message
-    
-    
-    
-    if showLogin
-      hr
-      h2.center Login Form
-      form(action='/login', method='post').center
-        div
-          label Username:
-          input(type='text', name='username')
-        div
-          label Password:
-          input(type='password', name='password')
-        div
-          input(type='submit', value='Log In')
-          
-    if showRegistration
-      hr
-      h2.center Registration Form
-      form(action='/register', method='post').center
-        div
-          label Username:
-          input(type='text', name='username')
-        div
-          label Password:
-          input(type='password', name='password')
-        div
-          input(type='submit', value='Register')
+    .navbar
+      .container
+        h1 FCC Chat App
+        if user
+          a(href='/logout' style='color: white') Logout
 
-    if showSocialAuth
-      hr
-      h2.center Social Login
-      .login.center
-        a(href='/auth/github').text Login with Github!
+    .container
+      .card
+        h2.center Welcome to Secure Chat
+        p#pug-variable= message
+
+        if showLogin
+          h3.center Login to Continue
+          form(action='/login' method='post')
+            .form-group
+              label(for='username') Username
+              input#username.form-control(type='text' name='username' required)
+            .form-group
+              label(for='password') Password
+              input#password.form-control(type='password' name='password' required)
+            button.btn.btn-primary(type='submit') Log In
+
+        if showRegistration
+          hr
+          h3.center Create Account
+          form(action='/register' method='post')
+            .form-group
+              label(for='username') Username
+              input#username.form-control(type='text' name='username' required)
+            .form-group
+              label(for='password') Password
+              input#password.form-control(type='password' name='password' required)
+            button.btn.btn-primary(type='submit') Register
+
+        if showSocialAuth
+          .social-login
+            h3.center Or continue with
+            a.btn.btn-ghost(href='/auth/github')
+              img(src='/public/github-icon.svg' alt='GitHub' style='height: 20px;')
+              | GitHub
